--- a/07.01-206-divs-flexbox-starter/css/main.css
+++ b/07.01-206-divs-flexbox-starter/css/main.css
@@ -97,33 +97,72 @@ textarea {
 
 
 html {
-  background-color: #fff;
+  background-color: #222;
   height: 100%;
+  width: 100%;
 }
 
 body {
   font-family: 'Source Sans Pro', sans-serif;
-  padding: 2em;
-  font-size: 1.25em;
-  height: 100%;
-}
-
-.wrapper {
-  display:flex;
-  justify-content: space-between;
   font-weight: 700;
+  padding: 0 2em;
+  color: #fff;
+  height: 100%;
+  background-image: url(../img/smoke-bkgd.jpg);
 }
 
-.div-1, .div-2, .div-3 {
+header,
+footer {
+    height: 80px;
+    width: 100%;
+    justify-content: flex-start;
+}
+
+main {
+    height: 250px;
+    width: 100%;
+    justify-content: center;
+}
+
+header,
+footer,
+main {
+    display: flex;
+    align-items: center;
+}
+
+.flex-container {
+  display:flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#div-1, #div-2, #div-3 {
   display: flex;
-  width: 30%;
   justify-content: center;
   align-items: center;/*give the divs a width of 30%, add display:flex, set justify-content and align-items to center*/
   color: #fff;
   line-height: 1.5em;
-  font-size: 1.6em;
-  background-color: #f16059;
-  height: 300px;
+  font-size: 1.25em;
+  height: auto;
+}
+
+.flex-items {
+    color: #fff;
+    line-height: 1.5em;
+    font-size: 1.6em;
+    /*background-color: #f16059;  */
+    width: 30%;
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+.wrapper span {
+    font-family: 'Lora', sans-serif;
+    font-size: 1.3em;
 }
 
 
@@ -209,7 +248,19 @@ body {
    Modify as content requires.
    ========================================================================== */
 
-@media print,
+@media all and (min-width: 1200px) {
+    .div-1, .div-2, .div-3 {
+        flex-basis: 30%;
+    }
+
+    .div-1, .div-2 {
+        border-right: 1px solid #555;
+        padding-right: 30px;
+    }
+}
+
+
+   @media print,
        (-webkit-min-device-pixel-ratio: 1.25),
        (min-resolution: 1.25dppx),
        (min-resolution: 120dpi) {
